@@ -7,6 +7,6 @@ set XDAG_OPTS="-t"
 #set JAVA_HOME="C:\Program Files\Java\jdk"
 
 # default JVM options
-set JAVA_OPTS="--enable-preview -server -Xms1g -Xmx1g"
+set JAVA_OPTS="-server -Xms1g -Xmx1g"
 
 java %JAVA_OPTS% -cp .;%XDAG_JARNAME% io.xdag.Bootstrap %*
